# yAMP

./: Cargo.toml
.github/workflows/: rust.yml
music-cache/: AGENTS.md  Cargo.toml  build.rs  music_cache.h
music-cache-derive/src/: lib.rs
music-cache/music-cache-derive/: Cargo.toml
music-cache/src/: ffi.rs  lib.rs  library_scan.rs
music-cache/src/db/: key.rs  methods.rs
music-cache/src/tests/: common.rs
music-cache/tests/: ffi_c_test.rs  ffi_shim.c  test.rs
src/: lib.rs  library_scan.rs  music_metadata.rs
src/db/: key.rs  methods.rs  mod.rs
src/tests/: common.rs
tests/: fs_utils.rs  test.rs
yAMP-tui/: Cargo.toml
yAMP-tui/src/: main.rs
