[package]
name = "music-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration-tests = ["fake"]

[profile.release]
lto = true

[dependencies]
audiotags = "0.5.0"
fake = { version = "2.9.2", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.10.1"
id3 = "1.13.1"
audiotags = "0.5.0"
fake = { version = "2.9.2", features = ["derive"] }
rand = "0.8.5"
