workspace = { members = ["music-cache-derive"] }
[package]
name = "music-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration-tests = ["fake", "zerocopy"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
music-cache-derive = { path = "./music-cache-derive" }
jwalk = "0.8.1"
audiotags = "0.5.0"
sled = "0.34.7"
rkyv = { version = "0.7.44", features = ["validation"] }
fake = { version = "2.9.2", features = ["derive"], optional = true }
zerocopy = { version = "0.7.34", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.10.1"
id3 = "1.13.1"
audiotags = "0.5.0"
sled = "0.34.7"
once_cell = "1.19.0"
fake = { version = "2.9.2", features = ["derive"] }
rand = "0.8.5"
