# workspace = { members = ["./music-cache-derive"] }
[package]
name = "music-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration-tests = ["fake"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[dependencies]
music-cache-derive = { path = "./music-cache-derive" }
jwalk = "0.8.1"
audiotags = "0.5.0"
sled = "0.34.7"
rayon = "1.10.0"
bitcode = { version = "0", features = ["derive"], default-features = false }
fake = { version = "2.9.2", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.10.1"
id3 = "1.13.1"
audiotags = "0.5.0"
rand = "0.8.5"
