[package]
name = "yamp-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration-tests = []

[dependencies]
music-cache = { path = "../music-cache" }
crossterm = "0.27.0"
ratatui = "0.26.0"
sled = "0.34.7"
color-eyre = "0.6.3"
